<resources>
    <string name="app_name">PyCon JP 2017</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_talks">Conference</string>
    <string name="nav_bookmark">Bookmarks</string>
    <string name="nav_keynote">Keynote Speakers</string>
    <string name="nav_posters">Poster Sessions</string>
    <string name="nav_events">Events</string>
    <string name="nav_access">Access</string>
    <string name="nav_floor_map">Floor Map</string>
    <string name="nav_about">About</string>
    <string name="nav_sponsors">Sponsors</string>
    <string name="nav_survey">Questionnaire</string>
    <string name="postal_code">〒169&#8211;8555</string>
    <string name="address">3&#8211;4&#8211;1 Ookubo, Shinjuku-ku, Tokyo</string>
    <string name="campus_short_name">Waseda University, Nishiwaseda Campus</string>
    <string name="participants">Guidance: https://pycon.jp/2017/en/participants/</string>
    <string name="about_pycon">PyCon JP 2017</string>
    <string name="about_pycon_body">PyCon JP is a conference where Python users, or people interested in Python, gather to learn from each other and meet other members of the community.\n\nThis year, we chose "Output &amp; Follow" as our theme. The PyCon JP staff is continuing to work hard on making a conference that will allow everyone to have a great time and unlock new possibilities through Python.</string>
    <string name="about_pycon_web">https://pycon.jp/2017</string>
    <string name="about_tab1">What is PyCon JP?</string>
<string name="about_tab2">Staff List</string>
    <string name="about_tab3">Code of Conduct</string>
    <string name="about_tab4">Summary</string>
    <string name="about_tab5">About this year theme</string>
    <string name="about_organizers">About PyCon JP</string>
    <string name="about_organizers_body1">PyCon JP 2017 is being organized by the PyCon JP Organizing Committee.</string>
    <string name="about_organizers_body2">We that python user are planning and operating PyCon JP to make it become the place where people communicate with other, share our knowledge and find the new possibility. We hope the PyCon JP become the position user can contect with the world and an attractive conference.</string>
    <string name="about_organizers_chairperson">Chair: Shunsuke Yoshida</string>
    <string name="about_organizers_web">Web site: http://www.pycon.jp</string>
    <string name="about_organizers_contact">Contact: 2017@pycon.jp</string>
    <string name="about_blog">PyCon JP Blog</string>
    <string name="about_blog_web">http://pyconjp.blogspot.jp/</string>
    <string name="about_staff">Staff list</string>
    <string name="about_sponsors">PyCon JP Sponsors List</string>
    <string name="about_host">Host: PyCon JP Committee</string>
    <string name="about_cohost">Cohost: Global Software Engineering Laboratory, Waseda University</string>
    <string name="about_this_app">About PyCon JP 2017 app</string>
    <string name="about_license">About this app</string>
    <string name="about_feedback">Send a feedback for this app</string>
    <string name="about_conduct_body1">PyCon JP is a conference organized and run by volunteers in the Japanese Python community that is dedicated to advancing and promoting the Python programming language. Through holding the PyCon JP conference, Python users can gather and exchange information with other deveopers from a wide variety of fields. It is our aim to create new relationships between the different communities and businesses using Python.\n\nHarassment includes offensive verbal comments related to gender, age, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.\n\nParticipants asked to stop any harassing behavior are expected to comply immediately.\n\nSponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualised images, activities, or other material. Booth staff (including volunteers) should not use sexualised clothing/uniforms/costumes, or otherwise create a sexualised environment.\n\nIf a participant engages in harassing behavior, the conference organisers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund.\n\nIf you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately. Conference staff can be identified as they\'ll be wearing branded t-shirts.\n\nConference staff will be happy to help participants contact hotel/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.\n\nWe expect participants to follow these rules at conference and workshop venues and conference-related social events.\n\n</string>
    <string name="about_theme_body1">We, PyCon JP 2017 staff, had been discussing the theme of PyCon JP 2017 since November 2016.\n\nThe PyCon JP 2017 staff organization selected a new chairperson, and accepted many new staff members to organize this year’s PyCon JP. At the beginning, we discussed "Stakeholder model", "Value analysis model" and "Value designed model". These models were examined during the PyConJP 2016 general staff meeting. With that examination, we solicited opinions regarding to the new theme for PyCon JP 2017 from all new staff members.\n\nWe also reconfirmed the concepts and themes up to PyCon JP 2016 and studied what kind of concept is good. Staff members also submitted new theme proposals and voted on them.\n\nHowever, the theme we selected was actually not the one with the most votes.\n\nThe reason for this is as follows. There were many concept drafts with a large number of votes, such as “dialogue among participants”, “spreading”, “connecting”. The “Output &amp; Follow” theme resonates with all of these concept drafts and is concrete, so we decided that it would be the most appropriate selection.\n\n</string>
    <string name="about_event_body1">Tutorials：Sep 7 (Thu)</string>
    <string name="about_event_body2">Conference：Sep 8(Fri)、Sep 9(Sat)</string>
    <string name="about_event_body3">Development Sprints：Sep 10(Sun)</string>
    <string name="about_event_body4">Venue：Waseda University, Nishiwaseda Campus</string>
    <string name="about_event_body6">Price</string>
    <string name="about_event_body7">Patron：40,000JPY</string>
    <string name="about_event_body8">Business：15,000JPY(Early Bird 12,000JPY)</string>
    <string name="about_event_body9">Personal：10,000JPY(Early Bird 8,000JPY)</string>
    <string name="about_event_body10">Student：5,000JPY(without After-Party 2,000JPY)</string>
    <string name="about_button_facebook">Facebook</string>
    <string name="about_button_twitter">Twitter</string>
    <string name="speaker">Speaker</string>
    <string name="description">Description</string>
    <string name="abst">Abstract</string>
    <string name="language">Language: </string>
    <string name="level">Audience Level: </string>
    <string name="category">Category: </string>
    <string name="action_refresh">Refresh</string>
    <string name="invited_talk">Invited Talks</string>
    <string name="description_invited_talk">The purpose of Invitation Talks is to invite guest speakers to share their unique perspectives and provide opportunities for participants to expand their networks. We invited two researchers this year!</string>
    <string name="url_invited_talk">https://pycon.jp/2017/en/talks/invited-speaker/</string>
    <string name="job_fair">Job Fair</string>
    <string name="description_job_fair">This program provides an opportunity for companies and individuals to meet and talk about their works in an informal setting.</string>
    <string name="url_job_fair">https://pycon.jp/2017/en/events/jobsfair/</string>
    <string name="products_fair">Products Fair</string>
    <string name="description_products_fair">In sponsors, we have panel discussion center at company which have developers project, and its theme is deep learning.</string>
    <string name="url_products_fair">https://pycon.jp/2017/en/productfair/</string>
    <string name="tutorial">Tutorials</string>
    <string name="description_tutorial">This year we will have courses in areas such as “Python for beginners”, “Data Analysis”, “Deep Learning” and “Documentation”. In this year, it is not required to apply to PyCon JP 2017 to attend these courses.</string>
    <string name="url_tutorial">https://pycon.jp/2017/en/events/tutorial/</string>
    <string name="youth_coder_workshop">Youth Coder Workshop</string>
    <string name="description_youth_coder_workshop">At PyCon JP 2017, we will hold a workshop for young coders or future coders.</string>
    <string name="url_youth_corder_workshop">https://pycon.jp/2017/en/events/youth-ws/</string>
    <string name="beginner_session">Beginner Session</string>
    <string name="description_beginner_session">We believe that reading Python libraries and read others’ code will be the best way to improve beginners’ coding skills. We will have three sessions in two days. Please feel free to join us.</string>
    <string name="url_beginner_session">https://pycon.jp/2017/en/events/beginners/</string>
    <string name="committee_meeting">Committee Meeting</string>
    <string name="description_committee_meeting">The PyCon JP board will be holding a public meeting to gather feedback from the community.</string>
    <string name="url_committee_meeting">https://pycon.jp/2017/en/events/committee-meeting/</string>
    <string name="community_booth">Community Booth</string>
    <string name="description_community_booth">Community Booth is an event where attendees can communicate with each other about Python and become familiar with members of existing Python Communities. </string>
    <string name="url_community_booth">https://pycon.jp/2017/en/events/community-booth/</string>
    <string name="open_space">Open Space</string>
    <string name="description_open_space">We provide some open spaces for presentations, meetings, and discussions.</string>
    <string name="url_open_space">https://pycon.jp/2017/en/events/open-space/</string>
    <string name="sprint">Development Sprints</string>
    <string name="description_sprint">Sprint is the event for the short term and centralized software developments. Some people call it as Hack-a-thon or developing meet up.It is a great opportunity for those who are interested and passionate about the developments in a group.</string>
    <string name="url_sprint">https://pycon.jp/2017/en/events/sprint/</string>
    <string name="keynote">Keynote</string>
    <string name="floor_map_01">Floor Map 1F</string>
    <string name="floor_map_02">Floor Map 2F</string>
    <string name="floor_map_03">Floor Map 3F</string>
    <string name="floor_map_description_01">Reception, Poster Session, Lunch, Party</string>
    <string name="floor_map_description_02">Conference, Sponsor Booth</string>
    <string name="floor_map_description_03">Open Spaces, Beginner Sessions, Youth Coder Workshop</string>
    <string name="pycon_theme">Output &amp; Follow</string>
    <string name="tutorial_day">9/7</string>
    <string name="conference_day_1">9/8</string>
    <string name="conference_day_2">9/9</string>
    <string name="conference_day_12">9/8-9</string>
    <string name="sprint_day">9/10</string>
    <string name="hashtag_prefix">#pyconjp_</string>
    <string name="twitter_prefix">\@</string>
    <string name="pycon_logo">PyCon JP 2017 logo</string>
</resources>