<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_gravity="center"
        android:contentDescription="@string/pycon_logo"
        android:tint="#D9FFFFFF"
        android:src="@drawable/logo_icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/about_organizers_body1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/about_organizers_body2"/>

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/about_organizers_chairperson"/>
        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/about_organizers_web"/>
        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/about_organizers_contact"/>
    </LinearLayout>

</FrameLayout>